recipe names now wrap correctly

--- a/app/assets/css/searchResults.styl
+++ b/app/assets/css/searchResults.styl
@@ -17,8 +17,9 @@
       font-size: $size3
       vertical-align center
       margin: auto 5px
-      Text-Overflow: ellipsis
       min-width 150px
+      white-space: normal
+
 
     .recipeImage
       flex 1
